rating impl in MainServiceImpl

--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -3,3 +3,5 @@ databaseChangeLog:
       file: db/changelog/changeset/create-table-food_record.sql
   - include:
       file: db/changelog/changeset/create-tables-bot_user.day.sql
+  - include:
+      file: db/changelog/changeset/alter-table-day.ratings.sql
