spring-boot:repackage included

--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     </parent>
     <groupId>com.argus</groupId>
     <artifactId>food-observer-bot</artifactId>
+    <packaging>jar</packaging>
     <version>0.0.1-SNAPSHOT</version>
     <name>food-observer-bot</name>
     <description>food-observer-bot</description>
@@ -91,4 +92,19 @@
 
     </dependencies>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 </project>
