--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -7,3 +7,5 @@ databaseChangeLog:
       file: db/changelog/changeset/alter-table-day.ratings.sql
   - include:
       file: db/changelog/changeset/alter-table-food_record.food.length.sql
+  - include:
+      file: db/changelog/changeset/alter-table-day.pimple.ratings.sql
