--- a/pom.xml
+++ b/pom.xml
@@ -89,7 +89,16 @@
             <artifactId>jackson-dataformat-yaml</artifactId>
             <version>2.14.2</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>5.2.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>5.2.2</version>
+        </dependency>
     </dependencies>
 
     <build>
