modes added; more menu options

--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -9,3 +9,5 @@ databaseChangeLog:
       file: db/changelog/changeset/alter-table-food_record.food.length.sql
   - include:
       file: db/changelog/changeset/alter-table-day.pimple.ratings.sql
+  - include:
+      file: db/changelog/changeset/alter-table-bot_user.add_mode.sql
