--- a/.github/workflows/docker-image.yaml
+++ b/.github/workflows/docker-image.yaml
@@ -9,6 +9,18 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+    env:
+      APP_PORT: ${{ vars.APP_PORT }}
+
+      DB_URL: ${{ secrets.DB_URL }}
+      DB_USERNAME: ${{ secrets.DB_USERNAME }}
+      DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+
+      BOT_TOKEN: ${{ secrets.BOT_TOKEN }}
+      BOT_NAME: ${{ secrets.BOT_NAME }}
+
+      EXCEL_PATH: ${{ vars.EXCEL_PATH }}
+
     steps:
       - uses: actions/checkout@v4
 
