lazy init in ExcelService and other fixes

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -21,6 +21,7 @@ services:
       - $APP_PORT:8082
     networks:
       - fobs-net
+    restart: unless-stopped
   db:
     image: postgres:$PG_VERSION
     container_name: fobs-db
