add readme; show notes; timezone fix for app container; no port exposed now; new buttons in some commands

--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -17,3 +17,5 @@ databaseChangeLog:
       file: db/changelog/changeset/8_alter-table-day.date_index.sql
   - include:
       file: db/changelog/changeset/9_alter-table-day.add_notes.sql
+  - include:
+      file: db/changelog/changeset/10_set-time-zone.sql
