--- a/monitoring/prometheus/prometheus.yml
+++ b/monitoring/prometheus/prometheus.yml
@@ -2,12 +2,12 @@ scrape_configs:
   - job_name: 'prometheus'
     scrape_interval: 5s
     static_configs:
-      - targets: [ '192.168.0.12:9090' ]
+      - targets: [ 'localhost:9090' ]
 
   - job_name: 'BotMetrics'
     metrics_path: '/actuator/prometheus'
     scrape_interval: 5s
     static_configs:
-      - targets: ['192.168.0.12:8080']
+      - targets: ['localhost:8080']
         labels:
-          application: 'My Spring Boot Application'
+          application: 'food observer bot'
