some fixes for prometheus

--- a/src/main/resources/application-prod.yaml
+++ b/src/main/resources/application-prod.yaml
@@ -8,6 +8,11 @@ spring:
     show-sql: false
   liquibase:
     enabled: true
+management:
+  endpoints:
+    web:
+      exposure:
+        include: [ "prometheus"]
 bot:
   token: ${BOT_TOKEN}
   name: ${BOT_NAME}
